Added layout header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Responsive Layout</title>
 </head>
 <body>
-    
+    <!-- HEADER -->
+    <header>
+        <div class="container">
+            <div class="row pad-col">
+                <div class="col-50 red">
+                    <div class="content">
+
+                    </div>
+                </div>
+                <div class="col-50 red">
+                    <div class="content">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- MAIN -->
+    <main>
+
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+
+    </footer>
 </body>
 </html>
