Added layout 2nd main container with responsive

--- a/index.html
+++ b/index.html
@@ -56,6 +56,23 @@
                 </div>
             </div>
         </div>
+
+        <div class="violet">
+            <div class="container">
+                <div class="row d-flex-wrap">
+                    <div class="col-60 white">
+                        <div class="content height-2">
+
+                        </div>
+                    </div>
+                    <div class="col-40 white">
+                        <div class="content height-2">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- FOOTER -->
