--- a/index.html
+++ b/index.html
@@ -73,6 +73,26 @@
                 </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="row d-flex-wrap margin-top-col-viol">
+                <div class="col-100 violet">
+                    <div class="content height">
+
+                    </div>
+                </div>
+                <div class="col-100 violet">
+                    <div class="content height">
+                        
+                    </div>
+                </div>
+                <div class="col-100 violet">
+                    <div class="content height">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- FOOTER -->
