Added last main layout and footer with responsive

--- a/index.html
+++ b/index.html
@@ -151,11 +151,33 @@
                 </div>
             </div>
         </div>
+
+        <div class="violet">
+            <div class="container">
+                <div class="row">
+                    <div class="col-100 white">
+                        <div class="content height">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- FOOTER -->
     <footer>
+        <div class="darkgrey">
+            <div class="container">
+                <div class="row">
+                    <div class="col-100 white">
+                        <div class="content height-footer">
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
