Added header with logo and button with responsive

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" 
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Responsive Layout</title>
 </head>
 <body>
@@ -11,14 +14,21 @@
     <header>
         <div class="container">
             <div class="row pad-col">
-                <div class="col-50 white">
-                    <div class="content height-header">
-
+                <div class="col-50">
+                    <div class="content logo height-header">
+                        <img src="./img/logo.png" alt="Logo">
                     </div>
                 </div>
-                <div class="col-50 white">
-                    <div class="content height-header">
-                        
+                <div class="col-50">
+                    <div class="content bars height-header">
+                        <i class="fa-solid fa-bars fa-xl"></i>
+                        <ul>
+                            <li>Planning <a href="Planning"></a></li>
+                            <li>Testimonials<a href="Testimonials"></a></li>
+                            <li>Features<a href="Features"></a></li>
+                            <li>About Us<a href="About Us"></a></li>
+                            <li class="btn">Get Started<a href="Get Started"></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
