Added content first main container

--- a/index.html
+++ b/index.html
@@ -40,13 +40,29 @@
         <div class="container">
             <div class="row d-flex-wrap margin-top-col margin-lft-rght">
                 <div class="col-66 lightblue ">
-                    <div class="content height">
-
+                    <div class="title">
+                        Get a demo application
+                    </div>
+                    <div class="text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Distinctio mollitia neque odit molestiae ipsum, eum amet quam ipsam 
+                        delectus quo numquam.
+                    </div>
+                    <button class="btn-apple">
+                        <i class="fa-brands fa-apple fa-lg"></i> App Store
+                    </button>
+                    <div>
+                        <img class="phone" src="./img/phone.png" alt="">
                     </div>
                 </div>
                 <div class="col-33 lightblue ">
-                    <div class="content height">
-                        
+                    <div class="title">
+                        Clean Code
+                    </div>
+                    <div class="text center">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Distinctio mollitia neque odit molestiae ipsum, eum amet quam ipsam 
+                        delectus quo numquam.
                     </div>
                 </div>
                 <div class="col-33 lightblue ">
