added content for mobile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row d-flex-wrap margin-top-col margin-lft-rght">
                 <div class="col-66 lightblue ">
-                    <div class="title">
+                    <div class="title blue">
                         Get a demo application
                     </div>
                     <div class="text">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="col-33 lightblue ">
-                    <div class="title center">
+                    <div class="title blue center">
                         Clean Code
                     </div>
                     <div class="text center padding-bottom-txt">
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col-33 lightblue ">
-                    <div class="title center">
+                    <div class="title blue center">
                         Web Design
                     </div>
                     <div class="text center padding-bottom-txt">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-33 lightblue ">
-                    <div class="title center">
+                    <div class="title blue center">
                         Development
                     </div>
                     <div class="text center padding-bottom-txt">
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="col-33 lightblue ">
-                    <div class="title center">
+                    <div class="title blue center">
                         Branding
                     </div>
                     <div class="text center padding-bottom-txt">
@@ -103,14 +103,34 @@
         <div class="violet">
             <div class="container">
                 <div class="row d-flex-wrap">
-                    <div class="col-60 white">
-                        <div class="content height-2">
-
+                    <div class="col-60">
+                        <div>
+                            <img class="planning" src="./img/planning1.png" alt="">
+                        </div>
+                        <div class="title-white">
+                            Strategic Planning
+                        </div>
+                        <div class="text-white">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Distinctio mollitia neque odit molestiae ipsum, eum amet quam ipsam 
+                            delectus quo numquam.
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Distinctio mollitia neque odit molestiae ipsum.
                         </div>
                     </div>
-                    <div class="col-40 white">
-                        <div class="content height-2">
-                            
+                    <div class="col-40 white padding-bottom-txt">
+                        <div>
+                            <img class="planning2" src="./img/planning2.png" alt="">
+                        </div>
+                        <div class="title center">
+                            App Development
+                        </div>
+                        <div class="text-card">
+                            Develop an on-demand app for your delivery business
+                            to reach your targeted customers without any interruption.
+                        </div>
+                        <div class="circle">
+                            <i class="black center fa-solid fa-arrow-down fa-lm"></i>
                         </div>
                     </div>
                 </div>
