fixed position img phone responsive

--- a/index.html
+++ b/index.html
@@ -40,18 +40,20 @@
         <div class="container">
             <div class="row d-flex-wrap margin-top-col margin-lft-rght">
                 <div class="col-66 lightblue ">
-                    <div class="title blue">
-                        Get a demo application
-                    </div>
-                    <div class="text">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                        Distinctio mollitia neque odit molestiae ipsum, eum amet quam ipsam 
-                        delectus quo numquam.
-                    </div>
-                    <button class="btn-apple">
-                        <i class="fa-brands fa-apple fa-lg"></i> App Store
-                    </button>
                     <div>
+                        <div class="title blue">
+                            Get a demo application
+                        </div>
+                        <div class="text">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                            Distinctio mollitia neque odit molestiae ipsum, eum amet quam ipsam 
+                            delectus quo numquam.
+                        </div>
+                        <button class="btn-apple">
+                            <i class="fa-brands fa-apple fa-lg"></i> App Store
+                        </button>
+                    </div>
+                    <div class="d-flex-end">
                         <img class="phone" src="./img/phone.png" alt="">
                     </div>
                 </div>
