added title and text in 3rd container

--- a/index.html
+++ b/index.html
@@ -143,6 +143,19 @@
 
         <div class="container">
             <div class="row d-flex-wrap margin-top-col-viol">
+                <div class="col-100">
+                    <div class="text-col-100 black center">
+                        TESTIMONIALS
+                    </div>
+                    <div class="violet-txt center">
+                        We are committed expert partners
+                    </div>
+                    <div class="text-col-100 black center">
+                        We place huge value on strong relationship and have seen the 
+                        benefit they bring to our business. Customer feedback is vital in helping
+                        us to get it right.
+                    </div>
+                </div>
                 <div class="col-100 violet">
                     <div class="content height">
 
