added img and text for mobile

--- a/index.html
+++ b/index.html
@@ -156,19 +156,49 @@
                         us to get it right.
                     </div>
                 </div>
-                <div class="col-100 violet">
-                    <div class="content height">
-
+                <div class="col-100 d-flex violet">
+                    <div class="d-flex-center">
+                        <div class="img-position d-flex-center">
+                            <img src="./img/testimonial1.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="text-col-100 white-txt center padding-bottom-txt">
+                        "We place huge value on strong relationship and have seen the 
+                        benefit they bring to our business. Customer feedback is vital in helping
+                        us to get it right."
+                    </div>
+                    <div class="text-col-100 white-txt center padding-bottom-txt">
+                        NAT REYNOLDS
                     </div>
                 </div>
-                <div class="col-100 violet">
-                    <div class="content height">
-                        
+                <div class="col-100 d-flex violet">
+                    <div class="d-flex-center">
+                        <div class="img-position d-flex-center">
+                            <img src="./img/testimonial2.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="text-col-100 white-txt center padding-bottom-txt">
+                        "We place huge value on strong relationship and have seen the 
+                        benefit they bring to our business. Customer feedback is vital in helping
+                        us to get it right."
+                    </div>
+                    <div class="text-col-100 bold white-txt center padding-bottom-txt">
+                        CELIA ALMEDA
                     </div>
                 </div>
-                <div class="col-100 violet">
-                    <div class="content height">
-                        
+                <div class="col-100 d-flex violet">
+                    <div class="d-flex-center">
+                        <div class="img-position d-flex-center">
+                            <img src="./img/testimonial3.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="text-col-100 white-txt center padding-bottom-txt">
+                        "We place huge value on strong relationship and have seen the 
+                        benefit they bring to our business. Customer feedback is vital in helping
+                        us to get it right."
+                    </div>
+                    <div class="text-col-100 bold white-txt center padding-bottom-txt">
+                        BOB ROBERTS
                     </div>
                 </div>
             </div>
