--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
         <div class="container">
             <div class="row d-flex-wrap margin-top-col-viol">
                 <div class="col-100">
-                    <div class="text-col-100 black center">
+                    <div class="text-100 black center">
                         TESTIMONIALS
                     </div>
                     <div class="violet-txt center">
                         We are committed expert partners
                     </div>
-                    <div class="text-col-100 black center">
+                    <div class="text-100 black center">
                         We place huge value on strong relationship and have seen the 
                         benefit they bring to our business. Customer feedback is vital in helping
                         us to get it right.
@@ -162,13 +162,15 @@
                             <img src="./img/testimonial1.jpg" alt="">
                         </div>
                     </div>
-                    <div class="text-col-100 white-txt center padding-bottom-txt">
-                        "We place huge value on strong relationship and have seen the 
-                        benefit they bring to our business. Customer feedback is vital in helping
-                        us to get it right."
-                    </div>
-                    <div class="text-col-100 white-txt center padding-bottom-txt">
-                        NAT REYNOLDS
+                    <div class="center-flex">
+                        <div class="text-col-100 white-txt padding-bottom-txt">
+                            "We place huge value on strong relationship and have seen the 
+                            benefit they bring to our business. Customer feedback is vital in helping
+                            us to get it right."
+                        </div>
+                        <div class="text-col-100 white-txt padding-bottom-txt">
+                            NAT REYNOLDS
+                        </div>
                     </div>
                 </div>
                 <div class="col-100 d-flex violet">
@@ -177,13 +179,15 @@
                             <img src="./img/testimonial2.jpg" alt="">
                         </div>
                     </div>
-                    <div class="text-col-100 white-txt center padding-bottom-txt">
-                        "We place huge value on strong relationship and have seen the 
-                        benefit they bring to our business. Customer feedback is vital in helping
-                        us to get it right."
-                    </div>
-                    <div class="text-col-100 bold white-txt center padding-bottom-txt">
-                        CELIA ALMEDA
+                    <div class="center-flex">
+                        <div class="text-col-100 white-txt padding-bottom-txt">
+                            "We place huge value on strong relationship and have seen the 
+                            benefit they bring to our business. Customer feedback is vital in helping
+                            us to get it right."
+                        </div>
+                        <div class="text-col-100 white-txt padding-bottom-txt">
+                            CELIA ALMEDIA
+                        </div>
                     </div>
                 </div>
                 <div class="col-100 d-flex violet">
@@ -192,13 +196,15 @@
                             <img src="./img/testimonial3.jpg" alt="">
                         </div>
                     </div>
-                    <div class="text-col-100 white-txt center padding-bottom-txt">
-                        "We place huge value on strong relationship and have seen the 
-                        benefit they bring to our business. Customer feedback is vital in helping
-                        us to get it right."
-                    </div>
-                    <div class="text-col-100 bold white-txt center padding-bottom-txt">
-                        BOB ROBERTS
+                    <div class="center-flex">
+                        <div class="text-col-100 white-txt padding-bottom-txt">
+                            "We place huge value on strong relationship and have seen the 
+                            benefit they bring to our business. Customer feedback is vital in helping
+                            us to get it right."
+                        </div>
+                        <div class="text-col-100 white-txt padding-bottom-txt">
+                            BOB ROBERTS
+                        </div>
                     </div>
                 </div>
             </div>
