--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 
         <div class="container">
-            <div class="row d-flex-wrap margin-top-col-viol">
+            <div class="row d-flex-wrap margin-top-col-viol padding-bottom-viol">
                 <div class="col-100">
                     <div class="text-100 black center">
                         TESTIMONIALS
