Added text and title cards with responsive

--- a/index.html
+++ b/index.html
@@ -214,35 +214,106 @@
         <div class="violet">
             <div class="container">
                 <div class="row d-flex-wrap">
-                    <div class="col-33-viol white">
-                        <div class="content height">
-
+                    <div class="col-100">
+                        <div class="title-white center">
+                            Benefits of working with us 
                         </div>
                     </div>
-                    <div class="col-33-viol white">
-                        <div class="content height">
-
+                    <div class="col-33-viol white padding-bottom-txt">
+                        <div class="txt-number">
+                            01
                         </div>
+                        <div class="title-card-number">
+                            High Quality
+                        </div>
+                        <div class="text-card-number">
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                        </div>
+                        <button class="btn-violet">
+                            more
+                        </button>
                     </div>
-                    <div class="col-33-viol white">
-                        <div class="content height">
-
+                    <div class="col-33-viol white padding-bottom-txt">
+                        <div class="txt-number">
+                            02
                         </div>
+                        <div class="title-card-number">
+                            Creative Team
+                        </div>
+                        <div class="text-card-number">
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                        </div>
+                        <button class="btn-violet">
+                            more
+                        </button>
                     </div>
-                    <div class="col-33-viol white">
-                        <div class="content height">
-
+                    <div class="col-33-viol white padding-bottom-txt">
+                        <div class="txt-number">
+                            03
                         </div>
+                        <div class="title-card-number">
+                            Amazing Results
+                        </div>
+                        <div class="text-card-number">
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                        </div>
+                        <button class="btn-violet">
+                            more
+                        </button>
                     </div>
-                    <div class="col-33-viol white">
-                        <div class="content height">
-
+                    <div class="col-33-viol white padding-bottom-txt">
+                        <div class="txt-number">
+                            04
                         </div>
+                        <div class="title-card-number">
+                            Best Pricing
+                        </div>
+                        <div class="text-card-number">
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                        </div>
+                        <button class="btn-violet">
+                            more
+                        </button>
                     </div>
-                    <div class="col-33-viol white">
-                        <div class="content height">
-
+                    <div class="col-33-viol white padding-bottom-txt">
+                        <div class="txt-number">
+                            05
                         </div>
+                        <div class="title-card-number">
+                            Innovations
+                        </div>
+                        <div class="text-card-number">
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                        </div>
+                        <button class="btn-violet">
+                            more
+                        </button>
+                    </div>
+                    <div class="col-33-viol white padding-bottom-txt">
+                        <div class="txt-number">
+                            06
+                        </div>
+                        <div class="title-card-number">
+                            24/7 Support
+                        </div>
+                        <div class="text-card-number">
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                        </div>
+                        <button class="btn-violet">
+                            more
+                        </button>
                     </div>
                 </div>
             </div>
