--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
         <div class="violet">
             <div class="container">
-                <div class="row d-flex-wrap">
+                <div class="row d-flex-wrap padding-bottom-viol">
                     <div class="col-100">
                         <div class="title-white center">
                             Benefits of working with us 
