Added title,text and img with responsive

--- a/index.html
+++ b/index.html
@@ -321,16 +321,45 @@
 
 
         <div class="container">
-            <div class="row-wrap-nowrap">
+            <div class="row-wrap-nowrap padding-about-us ">
             <div class="col-70">
-                    <div class="content height">
-
+                    <div class="violet-txt">
+                        About Us
+                    </div>
+                    <div class="text-abt-us">
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                            <br>
+                            <br>
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
+                            Vitae suscipit tellus mauris a diam maecenas sed enim ut. Mauris
+                            augue neque gravida in fermentum. Praesent semper feugiat nibh sed pulvinar
+                            proin id venenatis.
                     </div>
                 </div>
                 <div class="col-30">
-                    <div class="content height">
-                        
+                    <div class="img-position d-flex-center">
+                        <img src="./img/about.jpg" alt="">
                     </div>
+                    <div class="title-abt-us">
+                        I help companies tincidunt <br>tortor aliquam nulla <br>facilisi cras fementum odio.
+                    </div>
+                    <button class="btn-abt-us">
+                        <i class="fa-brands fa-linkedin fa-lg" style="color: #ffffff;"></i>
+                        Find me on linkedin
+                    </button>
                 </div>
             </div>
         </div>
